--- a/Test/Base.lproj/Main.storyboard
+++ b/Test/Base.lproj/Main.storyboard
@@ -18,7 +18,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="GuM-Rs-Gl3">
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" tag="10" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="GuM-Rs-Gl3">
                                 <rect key="frame" x="0.0" y="188" width="375" height="142"/>
                                 <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="WUC-b2-vu1">
@@ -35,11 +35,12 @@
                                             <rect key="frame" x="0.0" y="0.0" width="110" height="110"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </view>
-                                        <connections>
-                                            <segue destination="nQn-Pc-23z" kind="show" id="3Y7-BV-8aN"/>
-                                        </connections>
                                     </collectionViewCell>
                                 </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="T9l-Pg-oMV" id="j8n-m0-92E"/>
+                                    <outlet property="delegate" destination="T9l-Pg-oMV" id="6Ot-97-Ds6"/>
+                                </connections>
                             </collectionView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="باشگاه های پرطدفدار" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="w8I-1m-Lo3">
                                 <rect key="frame" x="61" y="114" width="236" height="63"/>
@@ -61,7 +62,7 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="QJY-9M-5DK">
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" tag="20" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="QJY-9M-5DK">
                                 <rect key="frame" x="0.0" y="412" width="375" height="186"/>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="S31-mR-U5F">
@@ -78,9 +79,6 @@
                                             <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </view>
-                                        <connections>
-                                            <segue destination="nQn-Pc-23z" kind="show" id="VPw-BP-ywj"/>
-                                        </connections>
                                     </collectionViewCell>
                                 </cells>
                                 <connections>
@@ -121,7 +119,9 @@
                         <barButtonItem key="backBarButtonItem" title=" " id="fS9-ec-QmP"/>
                     </navigationItem>
                     <connections>
-                        <outlet property="popularCollectionView" destination="QJY-9M-5DK" id="XCF-Hz-ynl"/>
+                        <outlet property="discountedCollectionView" destination="QJY-9M-5DK" id="Mke-54-s9A"/>
+                        <outlet property="popularCollectionView" destination="GuM-Rs-Gl3" id="7Rk-sF-i4L"/>
+                        <segue destination="nQn-Pc-23z" kind="show" identifier="showGym" id="M29-gw-mxA"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RaY-Pm-7DS" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -334,10 +334,10 @@
             </objects>
             <point key="canvasLocation" x="748" y="1880"/>
         </scene>
-        <!--View Controller-->
+        <!--Gym Detail View Controller-->
         <scene sceneID="6X2-Jt-YUW">
             <objects>
-                <viewController id="nQn-Pc-23z" sceneMemberID="viewController">
+                <viewController id="nQn-Pc-23z" customClass="GymDetailViewController" customModule="Test" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="9X1-Ek-mub">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -349,10 +349,17 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="juF-tz-hPt">
+                                <rect key="frame" x="89" y="64" width="240" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="RMv-yN-lLe"/>
                     </view>
+                    <connections>
+                        <outlet property="imageView" destination="juF-tz-hPt" id="xar-Dq-WwL"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ztr-g3-3Me" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -497,7 +504,4 @@
             <point key="canvasLocation" x="748" y="353.9730134932534"/>
         </scene>
     </scenes>
-    <inferredMetricsTieBreakers>
-        <segue reference="3Y7-BV-8aN"/>
-    </inferredMetricsTieBreakers>
 </document>
